fix search input text overflowing out of the container

--- a/app/assets/stylesheets/components/search_input.scss
+++ b/app/assets/stylesheets/components/search_input.scss
@@ -11,6 +11,7 @@
 
 .search-content{
   display: flex;
+  flex-wrap: wrap;
   color: #777777 !important;
   justify-content: space-between;
   padding: 20px 20px;
@@ -26,10 +27,14 @@
 .search-content div img{
   width: 12px;
 }
+
 .search-content div p{
   font-weight: 300;
-  margin-left: 10px;
   margin-bottom: 0;
+  word-break: break-word;
+}
+.search-content div small {
+  word-break: break-word;
 }
 
 .search-dropdown-active{
@@ -38,6 +43,7 @@
 
 .search-element{
   margin-bottom: 0;
+  max-width: 280px;
 }
 
 .searched-elements{
